force-app/main/default/staticresources/python/Disappear/src/objects/SubGroup__c.object
<CustomObject>
    <fields>
        <fullName>Data_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Source</label>
        <referenceTo>DataSource__c</referenceTo>
        <relationshipLabel>SubGroups</relationshipLabel>
        <relationshipName>SubGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <label>SubGroup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Data_Source__c</columns>
        <columns>NAME</columns>
        <columns>isLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DS</fullName>
        <columns>Data_Source__c</columns>
        <columns>NAME</columns>
        <columns>isLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Source__c</field>
            <operation>equals</operation>
            <value>Operations</value>
        </filters>
        <label>DS_</label>
    </listViews>
    <nameField>
        <label>SubGroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubGroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>